@@ -26,7 +26,7 @@
     z-index: 100;   
     margin-bottom: 0;
     border: none;
-    font-size: 1em;
+    font-size: 0.9em;
     padding: @space/3 * 1em @space/2 * 1em;
     .css3_border_radius(0);
 
@@ -59,17 +59,13 @@
     font-family: Geneva, "Times New Roman", serif;
     margin-right: .5em;
 }
-.info {
-    color: @infoText;
-    background-color: @infoBackground;
-    &:before {
-        background: darken(@infoBackground, 25%);
-    }
-}
-.alert {
+.alert, .info {
     color: @warningText;
     background-color: @warningBackground;  
     &:before {
         background: darken(@warningBackground, 25%);
     }
+}
+.info {
+    color: @black;
 }
