@@ -1,6 +1,11 @@
 karl package Changelog
 ======================
 
+UNRELEASED
+----------
+
+- Switched global notification background and text color (LP #1050965)
+
 3.97 (2012-09-14)
 -----------------
 
